-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 13.0.0
-
None
-
cde3cfea4 (master), 7bf7c4fbe (13.0)
Clang public releases are x.1.x (begins with minor version 1), while links point to x.0.x.
| For Gerrit Dashboard: QTCREATORBUG-30658 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 553785,2 | ClangTools: Fix clang-tidy doc URL for versions >= 18 | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 553803,2 | ClangTools: Fix clang-tidy doc URL for versions >= 18 | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |