ClangTools: Fix clang-tidy doc URL for versions >= 18

See https://github.com/llvm/llvm-project/commit/
4532617ae420056bf32f6403dde07fb99d276a49.

Fixes: QTCREATORBUG-30658
Change-Id: I4e171c52959d576ed752691d601ceb99691b207d
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Cristian Adam <cristian.adam@qt.io>
(cherry picked from commit cde3cfea4dab2368276b6e70269e5d1a81767e33)
Reviewed-by: Eike Ziller <eike.ziller@qt.io>